Fix failing test.